# ssyp21ws02

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  env.env  main.c  save  statistics  vkonsole
includes/: achivements.h  bullet.h  enemies.h  generic_array.h  hud.h  inventory.h  level.h  main.h  minimap.h  palette.h  pathfinder.h  player.h  popup.h  render.h  rich_presence.h  room.h  saver.h  statistics.h  title_screen.h  utility.h  world.h
psp-includes/: curses.h  ncurses.h
resources/rooms/: big_room.txt  big_room2.txt  end_room.txt  health_shrine.txt  item_shrine.txt  medium_room1.txt  medium_room3.txt  medium_room4.txt  mega_item_shrine.txt  small_room1.txt  start_room.txt  testroom.txt  testroom2.txt
src/: achivements.c  bullet.c  enemies.c  enemies.h  heap.c  heap.h  hud.c  hud.h  inventory.c  level.c  level.h  main.c  minimap.c  palette.c  pathfinder.c  pathfinder.h  player.c  player.h  popup.c  render.c  rich_presence.c  rich_presence.h  room.c  room.h  saver.c  statistics.c  title_screen.c  title_screen.h  utility.c  utility.h  world.c  world.h
